--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
     <div class="ToolTech">
         <h3 class="tool-head">Tools Knowledge & Experience</h3>
         <div class="tool-tech-align">
-            <span>
+            <!-- <span> -->
             <img src="images/gif/setting.gif" alt="Tools-Tech" class="Tools-Tech">
             <a href="ToolTech.html" class="ToolTech-text">Tools and Technologies</a>
             <span class="space"></span>
             <img src="images/gif/apple.gif" alt="experience-knowledge" class="exp-know-gif">
             <a href="KnowlegdeExp.html" class="exp-know-link">Knowledge and Experience</a>
-            </span>
+            <!-- </span> -->
         </div>
         <br>
     </div>
