--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <img src="images/gif/goal.gif" alt="achievement-image" class="achievement-image">
         <div class="personal-achievement">
             <ul class="achieve-list">
-                <li><p>Patent for my project “DUST ALERT KIT using IoT”. The publication of patent office had published by project in their OFFICIAL JOURNAL OF THE PATENT OFFICE.</p></li>
+                <li>Patent for my project “DUST ALERT KIT using IoT”. The publication of patent office had published by project in their OFFICIAL JOURNAL OF THE PATENT OFFICE.</li>
                 <li><p>Completed Certified software testing training at HCL TSS which includes both automation and manual testing.</p></li>
                 <li><p>Intern on “NETWORKING “, in “Worksbot Application Pvt. Ltd”., Chennai. </p></li>
                 <li><p>Intern on “IoT & ML”, in “Bolt IoT., Bangalore”.</p></li>
@@ -37,38 +37,38 @@
         <div class="education">
             <h2 class="edu-details">Education Details</h2>
             <img src="images/gif/mortarboard.gif" alt="education-animation" class="edu-animation">
-            <table class="edu-table" cellspacing="15">
-            <th>
-                <tr>
-                    <td><h4 class="course">COURSE</h4></td>
-                    <td><h4 class="year">YEAR</h4></td>
-                    <td><h4 class="institute">INSTITUTE</h4></td>
-                    <td><h4 class="university">UNIVERSITY / BOARD</h4></td>
-                    <td><h4 class="percentage">PERCENTAGE</h4></td>
-                </tr>
-            </th>
-            <tr>
-                <td><p>B.E (ECE)</p></td>
-                <td><p>2017-2021</p></td>
-                <td><p>Adhiparasakthi College of Engineering</p></td>
-                <td><p>Anna University Chennai</p></td>
-                <td><p>79.5</p></td>
-            </tr>
-            <tr>
-                <td><p>TWELFTH(HSC) BIO/MAT</p></td>
-                <td><p>2016-2017</p></td>
-                <td><p>NKM higher secondary school</p></td>
-                <td><p>TAMIL NADU STATE BOARD</p></td>
-                <td><p>68.75</p></td>
-            </tr>
-            <tr>
-                <td><p>TENTH(SSLC)</p></td>
-                <td><p>2014-2015</p></td>
-                <td><p>Seventh day Adventist Matric higher secondary school</p></td>
-                <td><p>TAMIL NADU STATE BOARD</p></td>
-                <td><p>95.2</p></td>
-            </tr>
-            </table>
+            <div class="table-div">
+                <table class="edu-table" cellspacing="0" cellpadding="0">
+                    <tr class="table-heading">
+                        <th><h4 class="course">COURSE</h4></th>
+                        <th><h4 class="year">YEAR</h4></th>
+                        <th><h4 class="institute">INSTITUTE</h4></th>
+                        <th><h4 class="university">UNIVERSITY / BOARD</h4></th>
+                        <th><h4 class="percentage">PERCENTAGE</h4></th>
+                    </tr>
+                    <tr>
+                        <td><p>B.E (ECE)</p></td>
+                        <td><p>2017-2021</p></td>
+                        <td><p>Adhiparasakthi College of Engineering</p></td>
+                        <td><p>Anna University Chennai</p></td>
+                        <td><p>79.5</p></td>
+                    </tr>
+                    <tr>
+                        <td><p>TWELFTH(HSC) BIO/MAT</p></td>
+                        <td><p>2016-2017</p></td>
+                        <td><p>NKM higher secondary school</p></td>
+                        <td><p>TAMIL NADU STATE BOARD</p></td>
+                        <td><p>68.75</p></td>
+                    </tr>
+                    <tr>
+                        <td><p>TENTH(SSLC)</p></td>
+                        <td><p>2014-2015</p></td>
+                        <td><p>Seventh day Adventist Matric higher secondary school</p></td>
+                        <td><p>TAMIL NADU STATE BOARD</p></td>
+                        <td><p>95.2</p></td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </div>
 </body>
