--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="Name">I'm Dasvin Kumar R.</h1>
         <h2 class="designation">Software Engineer</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="Cloud-image">
-        <img src="images/mountain.png" alt="Moutain-image">
+        <img src="images/mountain.png" alt="Moutain-image" class="mountain-image">
         </div>
     <div class="Mid-Container">
         <div class="Profile">
