--- a/about.html
+++ b/about.html
@@ -46,25 +46,25 @@
                         <th><h4 class="percentage">PERCENTAGE</h4></th>
                     </tr>
                     <tr>
-                        <td><p>B.E (ECE)</p></td>
-                        <td><p>2017-2021</p></td>
-                        <td><p>Adhiparasakthi College of Engineering</p></td>
-                        <td><p>Anna University Chennai</p></td>
-                        <td><p>79.5</p></td>
+                        <td><p class="para">B.E (ECE)</p></td>
+                        <td><p class="para">2017-2021</p></td>
+                        <td><p class="para">Adhiparasakthi College of Engineering</p></td>
+                        <td><p class="para">Anna University Chennai</p></td>
+                        <td><p class="para">79.5</p></td>
                     </tr>
                     <tr>
-                        <td><p>TWELFTH(HSC) BIO/MAT</p></td>
-                        <td><p>2016-2017</p></td>
-                        <td><p>NKM higher secondary school</p></td>
-                        <td><p>TAMIL NADU STATE BOARD</p></td>
-                        <td><p>68.75</p></td>
+                        <td><p class="para">TWELFTH(HSC) BIO/MAT</p></td>
+                        <td><p class="para">2016-2017</p></td>
+                        <td><p class="para">NKM higher secondary school</p></td>
+                        <td><p class="para">TAMIL NADU STATE BOARD</p></td>
+                        <td><p class="para">68.75</p></td>
                     </tr>
                     <tr>
-                        <td><p>TENTH(SSLC)</p></td>
-                        <td><p>2014-2015</p></td>
-                        <td><p>Seventh day Adventist Matric higher secondary school</p></td>
-                        <td><p>TAMIL NADU STATE BOARD</p></td>
-                        <td><p>95.2</p></td>
+                        <td><p class="para">TENTH(SSLC)</p></td>
+                        <td><p class="para">2014-2015</p></td>
+                        <td><p class="para">Seventh day Adventist Matric higher secondary school</p></td>
+                        <td><p class="para">TAMIL NADU STATE BOARD</p></td>
+                        <td><p class="para">95.2</p></td>
                     </tr>
                 </table>
         </div>
