--- a/about.html
+++ b/about.html
@@ -36,7 +36,22 @@
         <hr class="first-row">
         <div class="education">
             <h2 class="edu-details">Education Details</h2>
-            <img src="images/gif/mortarboard.gif" alt="education-animation" class="edu-animation">
+            <div class="ug">
+                <img src="images/gif/mortarboard.gif" alt="education-animation" class="edu-animation">
+                <p class="ug-content">Completed <strong>B.E Electronics and Communication Engineering</strong> in Anna University affiliated college <strong>Adhiparasakthi College of Engineering</strong> at <strong>2021</strong> with <strong>79.5%</strong></p>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="twelfth">
+                <img src="images/gif/school-bell.gif" alt="twelfth" class="twelfth-gif">
+                <p class="twelfth-content">Completed <strong>12th (HSC)</strong> in <strong>NKM HR SEC School</strong> at 2017 with 68.75%</p>
+            </div>
+            <br><br><br>
+            <div class="tenth">
+                <img src="images/gif/classroom.gif" alt="tenth-image" class="tenth-gif">
+                <p class="tenth-content"> Completed <strong>10th (SSLC)</strong> in <strong>Seventh Day Matric HR SEC School</strong> at 2015 with <strong>95.2%</strong></p>
+            </div>
         </div>
     </div>
 </body>
