--- a/index.html
+++ b/index.html
@@ -69,15 +69,16 @@
     <div class="ToolTech">
         <h3 class="tool-head">Tools Knowledge & Experience</h3>
         <div class="tool-tech-align">
-            <!-- <span> -->
-            <img src="images/gif/setting.gif" alt="Tools-Tech" class="Tools-Tech">
-            <a href="ToolTech.html" class="ToolTech-text">Tools and Technologies</a>
-            <span class="space"></span>
-            <img src="images/gif/apple.gif" alt="experience-knowledge" class="exp-know-gif">
-            <a href="KnowlegdeExp.html" class="exp-know-link">Knowledge and Experience</a>
-            <!-- </span> -->
+            <div class="ToTe">
+                <img src="images/gif/setting.gif" alt="Tools-Tech" class="Tools-Tech">
+                <p class="toteP"><a href="ToolTech.html" class="ToolTech-text">Tools and Technologies</a></p>
+            </div>
+            <div class="ExKn">
+                <img src="images/gif/apple.gif" alt="experience-knowledge" class="exp-know-gif">
+                <p class="exknP"><a href="KnowlegdeExp.html" class="exp-know-link">Knowledge and Experience</a></p>
+            </div>
         </div>
-        <br>
+        <br><br><br><br>
     </div>
     <div class="Bottom-Container">
         <div class="contact-me">
