--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="Top-Container">
         <a href="about.html" class="about-page">About</a>
         <img class="top-cloud" src="images/cloud.png" alt="Cloud-image">
-        <h1 class="Name">I'm Dasvin Kumar R.</h1>
+        <h1 class="Name">I'm Dasvin.</h1>
         <h2 class="designation">Software Engineer</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="Cloud-image">
         <img src="images/mountain.png" alt="Moutain-image" class="mountain-image">
