--- a/KnowlegdeExp.html
+++ b/KnowlegdeExp.html
@@ -18,15 +18,19 @@
         </div>
         <div class="Knowledge-content">
             <ul class="list">
-                <li>Experience in Automating the Test case using <strong><em>Robot Framework</em></strong>.</li><br>
+                <li>Experience in Automating the Test case using <strong><em>Selenium with Java, Robot Framework</em></strong>.</li><br>
                 <li>Experience in Functional testing like understanding the actual functionality and expectation from the testcase and automating it accordingly.</li><br>
                 <li>Experience in Defect Life cycle like Raising Defect in Jira and assigning to developer, then after fix is done --> resting and closing the defect else fix is not done properly then reassign to developer. Defect reopen can be done if the same issue repeats again.</li><br>
+                <li>Experience in <strong><em>API (Application Programming Interface) testing</em></strong> both manual and Automation.</li>
                 <li>Experience in Manual testing like analysing the requirement from Octane test case and performing the UI testing for it.</li><br>
                 <li>Experience in Code maintenance like cloning the source code from bitbucket and configuring it from local as adding newly automated test cases, maintenance cases, then committing it to bitbucket.</li><br>
                 <li>Experience in SQL Developer for manipulating data.</li><br>
+                <li>Creating, enhancing and Maintaining Basic Automation framework in selenium(java) 
+                    for scripting test cases.</li><br>
                 <li>Experience in Regression Testing like executing testcases from automation environment and analysing the reports for checking the defects.</li><br>
-                <li>Hands on experience in <strong><em>postman tool, cucumber BDD framework, maven project, testNG and Junit</em></strong>.</li><br>
-                <li>Hands on experience in product development using Arduino.</li><br>
+                <li>Experience in <strong><em>postman tool, Gradle Project, cucumber BDD framework, maven project, testNG and Junit</em></strong>.</li><br>
+                <li>Experience in Performance testing using JMeter</li>
+                <li>Experience in product development using Arduino.</li><br>
             </ul>
         </div>
     </div>
