--- a/ToolTech.html
+++ b/ToolTech.html
@@ -39,8 +39,8 @@
                         <p>Framework</p> 
                     </td>
                     <td>
-                        <p><em>Robot Framework, Cucumber BDD,</em></p>
-                        <p><em>Maven project, testNG, Junit</em></p>
+                        <p><em>Selenium, Robot Framework, Rest Assured,</em></p>
+                        <p><em>Cucumber BDD, Maven project, testNG, Junit, Gradle</em></p>
                     </td>
                 </tr>
                 <tr>
@@ -49,7 +49,7 @@
                         <p>Configuration</p>
                     </td>
                     <td>
-                        <p><em>Eclipse</em></p>
+                        <p><em>Eclipse, Postman, Visual Studio, JMeter</em></p>
                     </td>
                 </tr>
                 <tr>
