--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
         </div>
         <hr class="mid-container-rule-one">
         <div class="skills">
-            <h2 class="my-skills">My Skills</h2>
+            <h2 class="my-skills">Technical Skills</h2>
             <div class="skill-row-test">
-                <img src="images/gif/virus.gif" class="automation-logo" alt="automation-gif">
-                <h3 class="software-testing">Software Testing</h3>
+                <img src="images/jpeg/skills.jpg" class="automation-logo" alt="automation-gif">
+                <!--<h3 class="software-testing">Software Testing</h3>
                 <table cellspacing="10" class="software-testing-table">
                     <tr>
                         <td><p>Robot Framework, Cucumber BDD,<br>Maven Project, testNG, Junit</p></td>
@@ -46,9 +46,22 @@
                         <td><p>Manual Testing</p></td>
                         <td><p>⭐⭐⭐⭐⭐</p></td>
                     </tr>
-                </table>
+                </table>-->
+                <div class="skills-div">
+                <ul class="skill-list-head">
+                    <li><p class="skills-point">Automation testing (Selenium with java)</p></li>
+                    <li><p class="skills-point">API testing (Manual & Automation)</p></li>
+                    <li><p class="skills-point">Appium mobile application testing</p></li>
+                    <li><p class="skills-point">Manual Testing</p></li>
+                    <li><p class="skills-point">Performance testing - JMeter</p></li>
+                    <li><p class="skills-point">Core Java</p></li>
+                    <li><p class="skills-point">CCNA networking</p></li>
+                    <li><p class="skills-point">Product development using Arduino</p></li>
+                    <li><p class="skills-point">Web Development (HTML and CSS)</p></li>
+                </ul>
+                </div>
             </div>
-            <hr class="mid-container-rule-two"><br>
+            <!--<hr class="mid-container-rule-two"><br>
             <div class="skill-row-web">
                 <img src="images/gif/html.gif" class="coding-logo" alt="coding-gif">
                 <h3 class="web-development">Web Development & Languages</h3>
@@ -62,7 +75,7 @@
                         <td><p>⭐⭐⭐⭐</p></td>
                     </tr>
                 </table>
-            </div>
+            </div>-->
         </div>
         <hr class="mid-container-rule-three"><br>
     </div>
