--- a/KnowlegdeExp.html
+++ b/KnowlegdeExp.html
@@ -28,7 +28,7 @@
                 <li>Creating, enhancing and Maintaining Basic Automation framework in selenium(java) for scripting test cases.</li><br>
                 <li>Experience in Regression Testing like executing testcases from automation environment and analysing the reports for checking the defects.</li><br>
                 <li>Experience in <strong><em>postman tool, Gradle Project, cucumber BDD framework, maven project, testNG and Junit</em></strong>.</li><br>
-                <li>Experience in Performance testing using JMeter</li><br>
+                <li>Experience in Performance testing using JMeter.</li><br>
                 <li>Experience in product development using Arduino.</li><br>
             </ul>
         </div>
