--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <img src="images/boy.png" alt="Character-image" class="char-image">
             <h2 class="Professional-Synopsis">Professional Synopsis</h2>
             <p class="synopsis-content">
-                Over all 1 years of experience in the IT industry. 
+                Over all 2 years of experience in the IT industry. 
             </p><br>
-            <p class="synopsis-content">Currently working in HCL Technologies Ltd as Software Engineer.</p><br>
+            <p class="synopsis-content">Currently working in <em><strong>HCL Tech</strong></em> as Software Engineer.</p><br>
             <p class="synopsis-content">Good experience in automating testcases, functional testing, Jira and Bitbucket, Defect Life cycle, Web Development(HTML, CSS, JS) and Basics in Core Java.</p>
             <br>
         </div>
